test/syntax/fail/attrs/deprecated/more_than_one_arg.sync
[@deprecated("test", "test")]
let f x = x
