test/syntax/fail/attrs/deprecated/more_than_one_arg.expected
File "dummy.sync", line 1, characters 3-13:
 1 | [@deprecated("test", "test")]
       ^^^^^^^^^^

Error: The 'deprecated' attribute takes either no arguments or a single
       string argument.
